--- a/default/data/ui/views/analyze_hosts.xml
+++ b/default/data/ui/views/analyze_hosts.xml
@@ -1,5 +1,5 @@
 <form>
-  <label>Tune Hosts</label>
+  <label>Analyze Hosts</label>
   <search id="sourcetypeBaseSearch">
     <query>
       |loadjob savedsearch="roconnor:search:Sourcetype Frequency" | fields series frequency Percentile
@@ -45,6 +45,36 @@
   </fieldset>
   <row>
     <panel>
+      <html>
+This Dashboard displays advanced information about the shape of your data - broken down by a specific <b>host</b>. 
+<br/>
+</html>
+    </panel>
+  </row>
+  <row>
+    <panel>
+      <html>
+<h1>Panel Descriptions</h1>
+<h2>Latest Event</h2>
+Exactly what it sounds like. What time did the last event come in for this host?
+<h2>Maximum Data Gap (By Host)</h2>
+What was the maximum time between any two events in the selected time period? If no results were found, this means data has been sending at least once every 15 minutes. 
+<h2>Average Data Gap (By Host)</h2>
+What was the average time between any two events in the selected time period? If no results were found, this means data has been sending at least once every 15 minutes. 
+<h2>Timechart of Data</h2>
+A visualization of the number of events being sent over the selected time period. 
+<h2>Analysis by Host/Index/Sourcetype</h2>
+An advanced look at each Host/Sourcetype/Index combination for the selected host. This panel is clickable if you want to navigate over to an analysis of that sourcetype or index. 
+<h2>Business Hour vs Non-Business Hour Senders</h2>
+This panel will show you if your selected host sends more data during typical business hours, or during non-business hours. 
+<h2>Weekend vs Weekday Senders</h2>
+This panel will show you if your selected host sends more data during the weekend or weekdays.
+<br/>
+</html>
+    </panel>
+  </row>
+  <row>
+    <panel>
       <title>Latest Event</title>
       <single>
         <search>
@@ -79,6 +109,7 @@
   </row>
   <row>
     <panel>
+      <title>Timechart of Data</title>
       <chart>
         <search>
           <query>| tstats count WHERE host=$host$ by _time host sourcetype index span=15m | eval combo=host."-".sourcetype."-".index | xyseries _time combo count | makecontinuous _time span=15m | fillnull value=0</query>
@@ -111,12 +142,12 @@
         <drilldown>
           <condition field="host"></condition>
           <condition field="index">
-            <link target="_blank">/app/StatsforBrokenHosts/tune_indexes?form.index=$click.value2$</link>
+            <link target="_blank">/app/StatsforMissingData/analyze_indexes?form.index=$click.value2$</link>
           </condition>
           <condition field="avg"></condition>
           <condition field="max"></condition>
           <condition field="sourcetype">
-            <link target="_blank">/app/StatsforBrokenHosts/tune_sourcetypes?form.sourcetype=$click.value2$</link>
+            <link target="_blank">/app/StatsforMissingData/analyze_sourcetypes?form.sourcetype=$click.value2$</link>
           </condition>
         </drilldown>
       </table>
@@ -124,31 +155,38 @@
   </row>
   <row>
     <panel>
-      <title>Percent Difference (Business Hour vs Non-Business Hour)</title>
+      <title>Business Hour vs Non-Business Hour Senders</title>
       <table>
         <search base="nighttimeweekdaySearch">
-          <query>| eval combo=host."-".sourcetype."-".index | stats avg(count) as avg by business_hour,combo 
+          <query>| eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index | stats avg(count) as avg by business_hour,combo 
 | xyseries combo business_hour avg 
+|fillnull value=0
 | eval perc_diff=abs(((businesshour-nonbusinesshour)/((businesshour+nonbusinesshour)/2))*100) 
 | fillnull value=0 perc_diff 
-| eventstats p95(frequency) as p95 p75(frequency) as p75 p50(frequency) as p50 p25(frequency) as p25
-| eval Percentile = case(frequency &gt;= p95, "95",frequency &gt;= p75, "75",frequency &gt;= p50, "50", frequency &gt;= p25, "25", 1=1, "0") 
-| fields perc_diff combo | eval perc_diff=round(perc_diff,0)."%"|rename perc_diff as "Percent Difference" combo as "host-sourcetype-index" </query>
+| eval perc_diff=round(perc_diff,0)."%" 
+| rex field=combo "(?&lt;host&gt;(.*))&amp;&amp;&amp;&amp;(?&lt;sourcetype&gt;(.*))&amp;&amp;&amp;&amp;(?&lt;index&gt;(.*))" 
+| sort 0 - perc_diff
+| fields host index sourcetype perc_diff businesshour nonbusinesshour 
+| rename perc_diff as "Percent Difference" businesshour as "Average Events(Business Hours)" nonbusinesshour as "Average Events(Non-Business Hours)"
+</query>
         </search>
         <option name="drilldown">none</option>
       </table>
     </panel>
     <panel>
-      <title>Percent Difference (Weekday vs Weekend)</title>
+      <title>Weekend vs Weekday Senders</title>
       <table>
         <search base="nighttimeweekdaySearch">
-          <query>| eval combo=host."-".sourcetype."-".index | stats avg(count) as avg by weekend,combo
+          <query>| eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index | stats avg(count) as avg by weekend,combo
 | xyseries combo weekend avg 
+|fillnull value=0
 | eval perc_diff=abs(((weekday-weekend)/((weekday+weekend)/2))*100) 
 | fillnull value=0 perc_diff 
-| eventstats p95(perc_diff) as p95 p80(perc_diff) as p80 p50(perc_diff) as p50 
-| eval Percentile = case(frequency &gt;= p95, "95",frequency &gt;= p75, "75",frequency &gt;= p50, "50", frequency &gt;= p25, "25", 1=1, "0") 
-| fields perc_diff combo |  eval perc_diff=round(perc_diff,0)."%"|rename perc_diff as "Percent Difference" combo as "host-sourcetype-index"</query>
+|  eval perc_diff=round(perc_diff,0)."%"
+| rex field=combo "(?&lt;host&gt;(.*))&amp;&amp;&amp;&amp;(?&lt;sourcetype&gt;(.*))&amp;&amp;&amp;&amp;(?&lt;index&gt;(.*))" 
+| sort 0 - perc_diff
+| fields host index sourcetype perc_diff weekday weekend
+| rename perc_diff as "Percent Difference" combo as "host-sourcetype-index" weekday as "Average Events (Weekday)" weekend as "Average Events (Weekend)"</query>
         </search>
         <option name="drilldown">none</option>
       </table>
