Adding Massive Amount of Updates

--- a/default/data/ui/views/analyze_combination.xml
+++ b/default/data/ui/views/analyze_combination.xml
@@ -5,6 +5,11 @@
       |loadjob savedsearch="roconnor:search:Index Frequency" | fields index frequency Percentile
     </query>
   </search>
+  <search id="tstatsBaseSearch">
+    <query>
+      | tstats count WHERE index="$index$" AND host="$host$" AND sourcetype="$sourcetype$" AND (index=* OR index=_*) earliest=$field1.earliest$ latest=$field1.latest$ by _time host sourcetype index span=15m | eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index  | fields combo _time host sourcetype index count
+    </query>
+  </search>
   <search id="sourcetypeSearchStats">
     <query>
 | tstats count WHERE index="$index$" AND host="$host$" AND sourcetype="$sourcetype$" by _time host sourcetype index span=15m | sort 0 - host sourcetype index _time | streamstats window=2 range(_time) as range by host sourcetype index | sort - host | search range &gt; 900 | stats avg(range) as avg max(range) as max by sourcetype host index | eval max=round(max/60,0) | eval avg=round(avg/60,0) | rename max as "Maximum Gap" avg as "Average Gap"
@@ -28,29 +33,9 @@
     <input type="time" token="field1">
       <label>Select Time</label>
       <default>
-        <earliest>-7d@h</earliest>
+        <earliest>-30d@d</earliest>
         <latest>now</latest>
       </default>
-    </input>
-    <input type="dropdown" token="host" searchWhenChanged="true">
-      <label>Host</label>
-      <fieldForLabel>host</fieldForLabel>
-      <fieldForValue>host</fieldForValue>
-      <search>
-        <query>|metadata type=hosts index=* | table host</query>
-        <earliest>-24h@h</earliest>
-        <latest>now</latest>
-      </search>
-    </input>
-    <input type="dropdown" token="sourcetype" searchWhenChanged="true">
-      <label>Sourcetype</label>
-      <fieldForLabel>sourcetype</fieldForLabel>
-      <fieldForValue>sourcetype</fieldForValue>
-      <search>
-        <query>|metadata type=sourcetypes index=* | table sourcetype</query>
-        <earliest>-24h@h</earliest>
-        <latest>now</latest>
-      </search>
     </input>
     <input type="dropdown" token="index" searchWhenChanged="true">
       <label>Index</label>
@@ -58,7 +43,27 @@
       <fieldForValue>index</fieldForValue>
       <search>
         <query>|eventcount summarize=false index=* -count | table index | dedup index</query>
-        <earliest>-7d@h</earliest>
+        <earliest>$field1.earliest$</earliest>
+        <latest>now</latest>
+      </search>
+    </input>
+    <input type="dropdown" token="sourcetype" searchWhenChanged="true" depends="$index$">
+      <label>Sourcetype</label>
+      <fieldForLabel>sourcetype</fieldForLabel>
+      <fieldForValue>sourcetype</fieldForValue>
+      <search>
+        <query>| tstats count WHERE index="$index$" by sourcetype | dedup sourcetype</query>
+        <earliest>$field1.earliest$</earliest>
+        <latest>now</latest>
+      </search>
+    </input>
+    <input type="dropdown" token="host" searchWhenChanged="true" depends="$sourcetype$">
+      <label>Host</label>
+      <fieldForLabel>host</fieldForLabel>
+      <fieldForValue>host</fieldForValue>
+      <search>
+        <query>| tstats count WHERE index="$index$" AND sourcetype="$sourcetype$" by host | dedup host</query>
+        <earliest>$field1.earliest$</earliest>
         <latest>now</latest>
       </search>
     </input>
@@ -71,7 +76,7 @@ This Dashboard displays advanced information about the shape of your data - brok
 </html>
     </panel>
   </row>
-    <row>
+  <row>
     <panel>
       <html>
 <h1>Panel Descriptions</h1>
@@ -81,6 +86,8 @@ Exactly what it sounds like. What time did the last event come in for this combi
 What was the maximum time between any two events in the selected time period? If no results were found, this means data has been sending at least once every 15 minutes. 
 <h2>Average Data Gap (By Combination of Data)</h2>
 What was the average time between any two events in the selected time period? If no results were found, this means data has been sending at least once every 15 minutes. 
+<h2>Percent Difference (This Week vs. Last Week)</h2>
+What is the percent difference in events between this week, and last week? If we had 100 events this week, and 200 events last week, than our percent difference would be -66.6%
 <h2>Timechart of Data</h2>
 A visualization of the number of events being sent over the selected time period. 
 <h2>Analysis by Host/Index/Sourcetype</h2>
@@ -97,10 +104,7 @@ This panel will show you if your selected combination of data sends more data du
     <panel>
       <title>Latest Event</title>
       <single>
-        <search>
-          <query>| tstats count WHERE index="$index$" AND host="$host$" AND sourcetype="$sourcetype$" by _time host sourcetype index span=15m | eval combo=host."-".sourcetype."-".index | stats last(_time) as last by index | eval c_time=strftime(last,"%m/%d/%y %H:%M:%S") | fields c_time</query>
-          <earliest>$field1.earliest$</earliest>
-          <latest>$field1.latest$</latest>
+        <search base="tstatsBaseSearch">&gt;<query>| stats last(_time) as last by index | eval c_time=strftime(last,"%m/%d/%y %H:%M:%S") | fields c_time</query>
         </search>
         <option name="drilldown">none</option>
         <option name="refresh.display">progressbar</option>
@@ -126,14 +130,26 @@ This panel will show you if your selected combination of data sends more data du
         <option name="unit">Minutes</option>
       </single>
     </panel>
+    <panel>
+      <title>Percent Difference (This Week vs. Last Week)</title>
+      <single>
+        <search>
+          <query>| tstats count WHERE index="$index$" AND host="$host$" AND sourcetype="$sourcetype$" AND (index=* OR index=_*) earliest=-14d latest=now by _time host sourcetype index span=7d | eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index  | fields combo _time host sourcetype index count
+| fields combo _time host sourcetype index count 
+| streamstats current=f last(count) as last_count by combo 
+| eval diff = count-last_count | sort - _time | head 1 | eval percent_diff=((count-last_count)/((count+last_count)/2))*100 | fields percent_diff</query>
+          <earliest>$earliest$</earliest>
+          <latest>$latest$</latest>
+        </search>
+        <option name="drilldown">none</option>
+        <option name="unit">%</option>
+      </single>
+    </panel>
   </row>
   <row>
     <panel>
       <chart>
-        <search>
-          <query>| tstats count WHERE index="$index$" AND host="$host$" AND sourcetype="$sourcetype$" by _time host sourcetype index span=15m | eval combo=host."-".sourcetype."-".index | xyseries _time combo count | makecontinuous _time span=15m | fillnull value=0</query>
-          <earliest>$field1.earliest$</earliest>
-          <latest>$field1.latest$</latest>
+        <search base="tstatsBaseSearch">&gt;<query> | xyseries _time combo count | makecontinuous _time span=15m | fillnull value=0</query>
         </search>
         <option name="charting.chart">line</option>
         <option name="charting.chart.nullValueMode">zero</option>
@@ -146,24 +162,22 @@ This panel will show you if your selected combination of data sends more data du
     <panel>
       <title>Specific Gap Broken Down by Host/Index/Sourcetype</title>
       <table>
-        <search>
-          <query>| tstats count WHERE index="$index$" AND host="$host$" AND sourcetype="$sourcetype$" by _time host sourcetype index span=15m 
-| sort 0 - host sourcetype index _time | streamstats window=2 range(_time) as range by host sourcetype index | eval combo=host."-".sourcetype."-".index | stats avg(range) as avg max(range) as max count(combo) as M by sourcetype host index| eval max=round(max,0) 
+        <search base="tstatsBaseSearch">&gt;<query>
+| sort 0 - host sourcetype index _time | streamstats window=2 range(_time) as range by host sourcetype index | eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index | stats avg(range) as avg max(range) as max count(combo) as M by sourcetype host index| eval max=round(max,0) 
 | eval avg=round(avg,0) 
 | addinfo 
 | eval N=ceiling((info_max_time-info_min_time)/15/60)
 | eval frequency=M/N
 | fields index sourcetype host frequency avg max| eval frequency=round(frequency*100,0)."%"</query>
-          <earliest>$field1.earliest$</earliest>
-          <latest>$field1.latest$</latest>
         </search>
         <option name="refresh.display">progressbar</option>
         <drilldown>
           <condition field="host">
             <link target="_blank">/app/StatsforMissingData/analyze_hosts?form.host=$click.value2$</link>
           </condition>
-          <condition field="index"> <link target="_blank">/app/StatsforMissingData/analyze_indexes?form.index=$click.value2$</link></condition>
-          
+          <condition field="index">
+            <link target="_blank">/app/StatsforMissingData/analyze_indexes?form.index=$click.value2$</link>
+          </condition>
           <condition field="avg"></condition>
           <condition field="max"></condition>
           <condition field="sourcetype">
