--- a/default/data/ui/views/outlier_list.xml
+++ b/default/data/ui/views/outlier_list.xml
@@ -1,5 +1,34 @@
 <form>
   <label>Outlier List</label>
+  <search id="outlierBaseSearch">
+    <query>
+     | tstats count WHERE earliest=-8d@d latest=@d `missingdatasearchterms` by _time host sourcetype index span=`missingdatatimespan`
+| makecontinuous _time span=`missingdatatimespan`
+| eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index 
+| xyseries _time combo count 
+| makecontinuous _time span=`missingdatatimespan` 
+| fillnull value=0 
+| untable _time combo count 
+| eval HourOfDay=strftime(_time, "%H") 
+| eval BucketMinuteOfHour=strftime(_time, "%M") 
+| eval DayOfWeek=strftime(_time, "%A") 
+| stats avg(count) as actual by HourOfDay,BucketMinuteOfHour,DayOfWeek,combo,_time 
+| lookup state_lookup HourOfDay as HourOfDay BucketMinuteOfHour as BucketMinuteOfHour DayOfWeek as DayOfWeek combo as combo OUTPUT upperBound lowerBound 
+| fields HourOfDay BucketMinuteofHour DayOfWeek combo upperBound lowerBound actual _time frequency
+| eval isOutlierLow=if(actual &lt; lowerBound ,
+    abs(actual-lowerBound)/lowerBound, 0) 
+| eval isOutlierHigh=if(actual &gt; upperBound,
+    abs(actual-upperBound)/upperBound, 0) 
+| eval isOutlier=if(actual &lt; lowerBound OR actual &gt; upperBound,
+    abs(actual-upperBound)/abs(upperBound-lowerBound), 0) 
+| fields - HourOfDay 
+| fields _time actual combo lowerBound upperBound isOutlier isOutlierLow isOutlierHigh 
+| sort 0 + _time 
+| eval isOutlierBinary=case(isOutlierLow!=0, "1", isOutlierLow=0, "0") 
+| search isOutlierBinary=1 
+| rex field=combo "(?&lt;host&gt;(.*))\&amp;\&amp;\&amp;\&amp;(?&lt;sourcetype&gt;(.*))\&amp;\&amp;\&amp;\&amp;(?&lt;index&gt;(.*))" 
+    </query>
+  </search>
   <fieldset submitButton="false">
     <input type="time" token="field1">
       <label></label>
@@ -9,7 +38,7 @@
       </default>
     </input>
   </fieldset>
-   <row>
+  <row>
     <panel>
       <html>
 This Dashboard displays high level information about outliers in the amount of data being sent. This was built around the same framework that can be found in this <a href="https://www.splunk.com/blog/2018/01/19/cyclical-statistical-forecasts-and-anomalies-part-1.html">blog series</a> by the Splunk Machine Learning Toolkit team. 
@@ -39,49 +68,11 @@ This panel will give you timeline visualization of all your outliers.
     <panel>
       <chart>
         <title>Number of Outliers (by Host)</title>
-        <search>
-          <query>| tstats count WHERE earliest=-24h@h latest=-1h@h sourcetype=* by _time host sourcetype index span=30m 
-| makecontinuous _time span=30m 
-| eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index 
-| xyseries _time combo count 
-| makecontinuous _time span=30m 
-| fillnull value=0 
-| untable _time combo count 
-| eval HourOfDay=strftime(_time, "%H") 
-| eval BucketMinuteOfHour=strftime(_time, "%M") 
-| eval DayOfWeek=strftime(_time, "%A") 
-| stats avg(count) as actual by HourOfDay,BucketMinuteOfHour,DayOfWeek,combo,_time 
-| lookup state_lookup HourOfDay as HourOfDay BucketMinuteOfHour as BucketMinuteOfHour DayOfWeek as DayOfWeek combo as combo OUTPUT upperBound lowerBound 
-| fields - BucketMinuteOfHour DayOfWeek series 
-| eval isOutlierLow=if(actual &lt; lowerBound ,
-    abs(actual-lowerBound)/lowerBound, 0) 
-| eval isOutlierHigh=if(actual &gt; upperBound,
-    abs(actual-upperBound)/upperBound, 0) 
-| eval isOutlier=if(actual &lt; lowerBound OR actual &gt; upperBound,
-    abs(actual-upperBound)/abs(upperBound-lowerBound), 0) 
-| fields - HourOfDay 
-| fields _time actual combo lowerBound upperBound isOutlier isOutlierLow isOutlierHigh 
-| sort 0 + _time 
-| eval isOutlierBinary=case(isOutlierLow!=0, "1", isOutlierLow=0, "0") 
-| search isOutlierBinary=1 
-| rex field=combo "(?&lt;host&gt;(.*))\&amp;\&amp;\&amp;\&amp;(?&lt;sourcetype&gt;(.*))\&amp;\&amp;\&amp;\&amp;(?&lt;index&gt;(.*))" 
-| stats count by host sourcetype index combo 
-| sort - count 
-| join combo 
-    [| tstats count WHERE index=* by _time host sourcetype index span=15m 
-    | sort 0 - host sourcetype index _time 
-    | streamstats window=2 range(_time) as range by host sourcetype index 
-    | eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index 
-    | stats avg(range) as avg max(range) as max count(combo) as M by sourcetype host index combo 
-    | eval max=round(max,0) 
-    | eval avg=round(avg,0) 
-    | addinfo 
-    | eval N=ceiling((info_max_time-info_min_time)/15/60) 
-    | eval frequency=M/N 
-    | fields frequency combo 
-    | eval frequency=round(frequency*100,0)] | sort - frequency | rename frequency as "Frequency of Combo" | stats count by host</query>
-          <earliest>$field1.earliest$</earliest>
-          <latest>$field1.latest$</latest>
+        <search base="outlierBaseSearch">
+          <query> 
+
+| stats count by host | sort 0 - count
+</query>
         </search>
         <option name="charting.chart">pie</option>
         <option name="charting.drilldown">all</option>
@@ -93,49 +84,9 @@ This panel will give you timeline visualization of all your outliers.
     <panel>
       <chart>
         <title>Number of Outliers (by Sourcetype)</title>
-        <search>
-          <query>| tstats count WHERE earliest=-24h@h latest=-1h@h sourcetype=* by _time host sourcetype index span=30m 
-| makecontinuous _time span=30m 
-| eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index 
-| xyseries _time combo count 
-| makecontinuous _time span=30m 
-| fillnull value=0 
-| untable _time combo count 
-| eval HourOfDay=strftime(_time, "%H") 
-| eval BucketMinuteOfHour=strftime(_time, "%M") 
-| eval DayOfWeek=strftime(_time, "%A") 
-| stats avg(count) as actual by HourOfDay,BucketMinuteOfHour,DayOfWeek,combo,_time 
-| lookup state_lookup HourOfDay as HourOfDay BucketMinuteOfHour as BucketMinuteOfHour DayOfWeek as DayOfWeek combo as combo OUTPUT upperBound lowerBound 
-| fields - BucketMinuteOfHour DayOfWeek series 
-| eval isOutlierLow=if(actual &lt; lowerBound ,
-    abs(actual-lowerBound)/lowerBound, 0) 
-| eval isOutlierHigh=if(actual &gt; upperBound,
-    abs(actual-upperBound)/upperBound, 0) 
-| eval isOutlier=if(actual &lt; lowerBound OR actual &gt; upperBound,
-    abs(actual-upperBound)/abs(upperBound-lowerBound), 0) 
-| fields - HourOfDay 
-| fields _time actual combo lowerBound upperBound isOutlier isOutlierLow isOutlierHigh 
-| sort 0 + _time 
-| eval isOutlierBinary=case(isOutlierLow!=0, "1", isOutlierLow=0, "0") 
-| search isOutlierBinary=1 
-| rex field=combo "(?&lt;host&gt;(.*))\&amp;\&amp;\&amp;\&amp;(?&lt;sourcetype&gt;(.*))\&amp;\&amp;\&amp;\&amp;(?&lt;index&gt;(.*))" 
-| stats count by host sourcetype index combo 
-| sort - count 
-| join combo 
-    [| tstats count WHERE index=* by _time host sourcetype index span=15m 
-    | sort 0 - host sourcetype index _time 
-    | streamstats window=2 range(_time) as range by host sourcetype index 
-    | eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index 
-    | stats avg(range) as avg max(range) as max count(combo) as M by sourcetype host index combo 
-    | eval max=round(max,0) 
-    | eval avg=round(avg,0) 
-    | addinfo 
-    | eval N=ceiling((info_max_time-info_min_time)/15/60) 
-    | eval frequency=M/N 
-    | fields frequency combo 
-    | eval frequency=round(frequency*100,0)] | sort - frequency | rename frequency as "Frequency of Combo" | stats count by sourcetype | sort 0 - count</query>
-          <earliest>$field1.earliest$</earliest>
-          <latest>$field1.latest$</latest>
+        <search base="outlierBaseSearch">
+          <query>
+| stats count by sourcetype | sort 0 - count</query>
         </search>
         <option name="charting.chart">pie</option>
         <option name="charting.drilldown">all</option>
@@ -147,49 +98,9 @@ This panel will give you timeline visualization of all your outliers.
     <panel>
       <chart>
         <title>Number of Outliers (by Index)</title>
-        <search>
-          <query>| tstats count WHERE earliest=-24h@h latest=-1h@h sourcetype=* by _time host sourcetype index span=30m 
-| makecontinuous _time span=30m 
-| eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index 
-| xyseries _time combo count 
-| makecontinuous _time span=30m 
-| fillnull value=0 
-| untable _time combo count 
-| eval HourOfDay=strftime(_time, "%H") 
-| eval BucketMinuteOfHour=strftime(_time, "%M") 
-| eval DayOfWeek=strftime(_time, "%A") 
-| stats avg(count) as actual by HourOfDay,BucketMinuteOfHour,DayOfWeek,combo,_time 
-| lookup state_lookup HourOfDay as HourOfDay BucketMinuteOfHour as BucketMinuteOfHour DayOfWeek as DayOfWeek combo as combo OUTPUT upperBound lowerBound 
-| fields - BucketMinuteOfHour DayOfWeek series 
-| eval isOutlierLow=if(actual &lt; lowerBound ,
-    abs(actual-lowerBound)/lowerBound, 0) 
-| eval isOutlierHigh=if(actual &gt; upperBound,
-    abs(actual-upperBound)/upperBound, 0) 
-| eval isOutlier=if(actual &lt; lowerBound OR actual &gt; upperBound,
-    abs(actual-upperBound)/abs(upperBound-lowerBound), 0) 
-| fields - HourOfDay 
-| fields _time actual combo lowerBound upperBound isOutlier isOutlierLow isOutlierHigh 
-| sort 0 + _time 
-| eval isOutlierBinary=case(isOutlierLow!=0, "1", isOutlierLow=0, "0") 
-| search isOutlierBinary=1 
-| rex field=combo "(?&lt;host&gt;(.*))\&amp;\&amp;\&amp;\&amp;(?&lt;sourcetype&gt;(.*))\&amp;\&amp;\&amp;\&amp;(?&lt;index&gt;(.*))" 
-| stats count by host sourcetype index combo 
-| sort - count 
-| join combo 
-    [| tstats count WHERE index=* by _time host sourcetype index span=15m 
-    | sort 0 - host sourcetype index _time 
-    | streamstats window=2 range(_time) as range by host sourcetype index 
-    | eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index 
-    | stats avg(range) as avg max(range) as max count(combo) as M by sourcetype host index combo 
-    | eval max=round(max,0) 
-    | eval avg=round(avg,0) 
-    | addinfo 
-    | eval N=ceiling((info_max_time-info_min_time)/15/60) 
-    | eval frequency=M/N 
-    | fields frequency combo 
-    | eval frequency=round(frequency*100,0)] | sort - frequency | rename frequency as "Frequency of Combo" | stats count by index | sort 0 - count</query>
-          <earliest>$field1.earliest$</earliest>
-          <latest>$field1.latest$</latest>
+        <search base="outlierBaseSearch">
+          <query>
+| stats count by index | sort 0 - count</query>
         </search>
         <option name="charting.chart">pie</option>
         <option name="charting.drilldown">all</option>
@@ -203,51 +114,12 @@ This panel will give you timeline visualization of all your outliers.
     <panel>
       <table>
         <title>List of Outliers</title>
-        <search>
-          <query>| tstats count WHERE earliest=-24h@h latest=-1h@h sourcetype=* by _time host sourcetype index span=30m 
-| makecontinuous _time span=30m 
-| eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index 
-| xyseries _time combo count 
-| makecontinuous _time span=30m 
-| fillnull value=0 
-| untable _time combo count 
-| eval HourOfDay=strftime(_time, "%H") 
-| eval BucketMinuteOfHour=strftime(_time, "%M") 
-| eval DayOfWeek=strftime(_time, "%A") 
-| stats avg(count) as actual by HourOfDay,BucketMinuteOfHour,DayOfWeek,combo,_time 
-| lookup state_lookup HourOfDay as HourOfDay BucketMinuteOfHour as BucketMinuteOfHour DayOfWeek as DayOfWeek combo as combo OUTPUT upperBound lowerBound 
-| fields - BucketMinuteOfHour DayOfWeek series 
-| eval isOutlierLow=if(actual &lt; lowerBound ,
-    abs(actual-lowerBound)/lowerBound, 0) 
-| eval isOutlierHigh=if(actual &gt; upperBound,
-    abs(actual-upperBound)/upperBound, 0) 
-| eval isOutlier=if(actual &lt; lowerBound OR actual &gt; upperBound,
-    abs(actual-upperBound)/abs(upperBound-lowerBound), 0) 
-| fields - HourOfDay 
-| fields _time actual combo lowerBound upperBound isOutlier isOutlierLow isOutlierHigh 
-| sort 0 + _time 
-| eval isOutlierBinary=case(isOutlierLow!=0, "1", isOutlierLow=0, "0") 
-| search isOutlierBinary=1 
-| rex field=combo "(?&lt;host&gt;(.*))\&amp;\&amp;\&amp;\&amp;(?&lt;sourcetype&gt;(.*))\&amp;\&amp;\&amp;\&amp;(?&lt;index&gt;(.*))" 
+        <search base="outlierBaseSearch">
+          <query>
+| rename frequency as "Frequency of Combo"
 | stats count by host sourcetype index combo 
-| sort - count 
-| join combo 
-    [| tstats count WHERE index=* by _time host sourcetype index span=15m 
-    | sort 0 - host sourcetype index _time 
-    | streamstats window=2 range(_time) as range by host sourcetype index 
-    | eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index 
-    | stats avg(range) as avg max(range) as max count(combo) as M by sourcetype host index combo 
-    | eval max=round(max,0) 
-    | eval avg=round(avg,0) 
-    | addinfo 
-    | eval N=ceiling((info_max_time-info_min_time)/15/60) 
-    | eval frequency=M/N 
-    | fields frequency combo 
-    | eval frequency=round(frequency*100,0)] | sort - frequency | rename frequency as "Frequency of Combo" | fields - combo
-    | sort 0 - count "Frequency of Combo"</query>
-          <earliest>$field1.earliest$</earliest>
-          <latest>$field1.latest$</latest>
-          <sampleRatio>1</sampleRatio>
+| fields - combo
+| sort 0 - count "Frequency of Combo"</query>
         </search>
         <option name="count">20</option>
         <option name="dataOverlayMode">none</option>
@@ -260,43 +132,6 @@ This panel will give you timeline visualization of all your outliers.
           <link target="_blank">/app/StatsforMissingData/outlier_analysis?form.index=$row.index$&amp;form.host=$row.host$&amp;form.sourcetype=$row.sourcetype$</link>
         </drilldown>
       </table>
-    </panel>
-    <panel>
-      <chart>
-        <title>Timechart of Outliers</title>
-        <search>
-          <query>| tstats count WHERE  earliest=-24h@h latest=-1h@h sourcetype=* by _time host sourcetype index span=30m 
-| makecontinuous _time span=30m 
-| eval combo=host."&amp;&amp;&amp;&amp;".sourcetype."&amp;&amp;&amp;&amp;".index 
-| xyseries _time combo count 
-| makecontinuous _time span=30m 
-| fillnull value=0 
-| untable _time combo count 
-| eval HourOfDay=strftime(_time, "%H") 
-| eval BucketMinuteOfHour=strftime(_time, "%M") 
-| eval DayOfWeek=strftime(_time, "%A") 
-| stats avg(count) as actual by HourOfDay,BucketMinuteOfHour,DayOfWeek,combo,_time 
-| lookup state_lookup HourOfDay as HourOfDay BucketMinuteOfHour as BucketMinuteOfHour DayOfWeek as DayOfWeek combo as combo OUTPUT upperBound lowerBound 
-| fields - BucketMinuteOfHour DayOfWeek series 
-| eval isOutlierLow=if(actual &lt; lowerBound ,
-    abs(actual-lowerBound)/lowerBound, 0) 
-| eval isOutlierHigh=if(actual &gt; upperBound,
-    abs(actual-upperBound)/upperBound, 0) 
-| eval isOutlier=if(actual &lt; lowerBound OR actual &gt; upperBound,
-    abs(actual-upperBound)/abs(upperBound-lowerBound), 0) 
-| fields - HourOfDay 
-| fields _time actual combo lowerBound upperBound isOutlier isOutlierLow isOutlierHigh 
-| sort 0 + _time 
-| eval isOutlierBinary=case(isOutlierLow!=0, "1", isOutlierLow=0, "0") 
-| search isOutlierBinary=1 
-| rex field=combo "(?&lt;host&gt;(.*))\&amp;\&amp;\&amp;\&amp;(?&lt;sourcetype&gt;(.*))\&amp;\&amp;\&amp;\&amp;(?&lt;index&gt;(.*))" 
-| fields host sourcetype index _time  combo | timechart count by combo</query>
-          <earliest>$field1.earliest$</earliest>
-          <latest>$field1.latest$</latest>
-        </search>
-        <option name="charting.chart">line</option>
-        <option name="charting.drilldown">none</option>
-      </chart>
     </panel>
   </row>
 </form>
